--- a/css/styles.css
+++ b/css/styles.css
@@ -9,23 +9,60 @@ nav{
     background-color: rgb(38, 2, 122);
     
 }
-nav a{
-    text-decoration: none;
-    padding: 10px;
+
+nav ul{
+    list-style: none;
     text-align: center;
-    background-color: rgb(38, 2, 122);
-    color: #000000;
-    display: inline-block;
-    width:  10%;
-    color: #FFFFFF;
-    transition: 2s background-color;
-    
+    padding: 0;
+    margin: 0;
 }
 
+nav li{
+    padding: 0px;
+    text-align: center;
+    background-color: rgb(38, 2, 122);
+    display: inline-block;
+    width:  11%;
+}
+
+
+
+nav a{
+    text-decoration: none;
+    color: #FFFFFF;
+    display: block;
+    transition: 1s background-color;
+    border-top-left-radius: 10%;
+    border-top-right-radius: 10%;
+    line-height: 40px; 
+}
+
+
+
 nav a:hover{
-    width: 15%;
     background-color: rgb(16, 91, 253);
-    font-size: 120%;
+
+}
+
+
+nav li li{
+    font-size: .8em;
+    display: block;
+    width: 95%;
+}
+
+nav li li a{
+    border-radius: 0%;
+}
+
+nav li ul {
+    position: absolute;
+    display: none;
+    width: inherit;
+}
+
+nav li:hover ul{
+    display: block;
 }
 
 h1{
@@ -36,6 +73,8 @@ h1{
 }
 .current{
     background-color: rgb(16, 91, 253);
+    border-top-left-radius: 10%;
+    border-top-right-radius: 10%;
 }
 .left{
     display:inline-block;
