--- a/css/styles.css
+++ b/css/styles.css
@@ -164,3 +164,39 @@ body{
 .Blog p{
     text-align:justify;
 }
+
+ol ol{
+    list-style-type: upper-alpha;
+}
+
+h5{
+    font-size:105%;
+}
+
+table{
+    width: 70%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+tr td:first-child{
+    text-align: left;
+}
+
+tr th:first-child{
+    text-align: left;
+}
+
+th{
+    border-bottom: 1px solid black;
+    border-top: black 1px solid;
+}
+
+table tr:last-child td{
+    border-bottom: 1px solid black;
+}
+
+caption{
+    font-weight: bold;
+}
+
